feat(agentrazor): improve useage
